2008-02-21  Michael Natterer  <mitch@gimp.org>

	* app/actions/plug-in-actions.c (plug_in_actions_history_changed):
	don't call plug_in_actions_update() because that updated the
	sensitivity of *all* plug-in actions according to the properties
	of the *current* image. Instead, look up the original GtkAction of
	the history items of *this* action group and copy the sensitivity
	from that action. Fixes bug #517683.

2008-02-21  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/app.pl (marshal_outargs): insert a missing newline
	for procedures without additional return values.

	* tools/pdbgen/pdb/display.pdb: cosmetics.

	* app/pdb/brushes_cmds.c
	* app/pdb/context_cmds.c
	* app/pdb/display_cmds.c
	* app/pdb/fonts_cmds.c
	* app/pdb/gradients_cmds.c
	* app/pdb/palettes_cmds.c
	* app/pdb/patterns_cmds.c: regenerated.

2008-02-21  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-preview.[ch]: code cleanup.

2008-02-21  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-preview.[ch]: provide feedback when hovering
	over the preview.

2008-02-21  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-preview.c (gimp_print_preview_expose_event):
	changed drawing so that strokes are not scaled.

2008-02-20  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpcurve.c: add precondition checks.

	* app/core/gimpdrawable-curves.c (gimp_drawable_curves_spline):
	divide values by 255 before setting them on the curve. Fixes crash
	when using curves from the PDB.

2008-02-19  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-preview.c (gimp_print_preview_expose_event):
	code cleanup. Always draw the preview.

2008-02-19  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/jpeg/jpeg-exif.c: correctly record dimensions when
	saving an image.  Fixes bug #517077.
	
2008-02-19  Sven Neumann  <sven@gimp.org>

	* app/app.c
	* app/batch.c
	* app/core/gimp.c
	* app/gui/gui.c: use G_STRFUNC instead of hardcoding the function
	name in verbose output.
