@@ -1,3 +1,9 @@
+2008-02-22  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/wind.c (render_wind): fixed call to
+	gimp_drawable_mask_intersect() which was causing a crash as
+	reported in bug #516369.
+
 2008-02-21  Michael Natterer  <mitch@gimp.org>
 
 	* app/actions/plug-in-actions.c (plug_in_actions_history_changed):
